--- a/src/app/Components/userBiomedica/clasificacion-inventario/clasificacion-inventario.component.css
+++ b/src/app/Components/userBiomedica/clasificacion-inventario/clasificacion-inventario.component.css
@@ -102,3 +102,8 @@ h6 {
   font-size: 1.25rem;
   font-weight: 600;
 }
+
+.gradient-green {
+  background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+  color: white;
+}
