--- a/src/app/Components/userBiomedica/clasificacion-inventario/clasificacion-inventario.component.html
+++ b/src/app/Components/userBiomedica/clasificacion-inventario/clasificacion-inventario.component.html
@@ -83,5 +83,17 @@
       </div>
     </div>
 
+    <!-- Riesgo -->
+    <div class="dashboard-card" (click)="showViewRiesgos()">
+      <div class="card-icon-container gradient-green">
+        <i class="pi pi-exclamation-triangle"></i>
+      </div>
+      <div class="card-content">
+        <h3>Riesgo</h3>
+        <p>Clasificación por nivel de riesgo (I, IIA, IIB...).</p>
+        <span class="card-action">Ver Riesgos <i class="pi pi-arrow-right"></i></span>
+      </div>
+    </div>
+
   </div>
 </div>
