--- a/src/app/Components/userBiomedica/clasificacion-tipo-equipo/clasificacion-tipo-equipo.component.html
+++ b/src/app/Components/userBiomedica/clasificacion-tipo-equipo/clasificacion-tipo-equipo.component.html
@@ -12,7 +12,7 @@
   <div class="cards-grid">
     <div class="dashboard-card" *ngFor="let tipoEquipo of filteredTiposEquipos()"
       (click)="viewEquiposTipos(tipoEquipo.id)">
-      <div class="card-icon-container gradient-purple">
+      <div class="card-icon-container gradient-mint">
         <i class="pi pi-cog"></i>
       </div>
       <div class="card-content">
