--- a/src/app/Components/administracion/admservicios/admservicios.component.html
+++ b/src/app/Components/administracion/admservicios/admservicios.component.html
@@ -36,6 +36,8 @@
         <th pSortableColumn="nombres" style="width:30%">Nombre <p-sortIcon field="nombres"></p-sortIcon></th>
         <th pSortableColumn="sede.nombres" style="width:30%">Sede <p-sortIcon field="sede.nombres"></p-sortIcon></th>
         <th pSortableColumn="ubicacion" style="width:30%">Ubicación <p-sortIcon field="ubicacion"></p-sortIcon></th>
+        <th pSortableColumn="requiereMesaServicios" style="width:20%">Gestiona casos en mesa de servicios <p-sortIcon
+            field="requiereMesaServicios"></p-sortIcon></th>
         <th style="width:10%" class="text-center">Acciones</th>
       </tr>
     </ng-template>
@@ -45,6 +47,10 @@
         <td class="font-bold">{{ servicio.nombres }}</td>
         <td>{{ servicio.sede?.nombres }}</td>
         <td>{{ servicio.ubicacion }}</td>
+        <td>
+          <p-tag [value]="servicio.requiereMesaServicios ? 'Si' : 'No'"
+            [severity]="servicio.requiereMesaServicios ? 'success' : 'warning'"></p-tag>
+        </td>
         <td class="text-center">
           <div class="flex justify-content-center gap-2">
             <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" severity="warn"
@@ -85,6 +91,12 @@
     <div class="flex flex-column gap-2">
       <label for="ubicacion" class="font-bold">Ubicación</label>
       <input id="ubicacion" type="text" pInputText formControlName="ubicacion" />
+    </div>
+
+    <div class="flex align-items-center gap-2">
+      <p-checkbox id="requiereMesa" formControlName="requiereMesaServicios" [binary]="true"
+        inputId="binary"></p-checkbox>
+      <label for="requiereMesa" class="font-bold">Requiere Mesa de Servicios</label>
     </div>
 
     <div class="flex justify-content-end gap-2 mt-4">
