--- a/src/app/Components/userBiomedica/clasificacion-riesgos/clasificacion-riesgos.component.html
+++ b/src/app/Components/userBiomedica/clasificacion-riesgos/clasificacion-riesgos.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="card-content">
                 <h3>Riesgo {{ riesgo }}</h3>
-                <p>Ver equipos de este nivel</p>
+                <p>Total Equipos: <strong>{{ cantidadesEquipos[riesgo] || 0 }}</strong></p>
                 <span class="card-action">Ver Equipos <i class="pi pi-arrow-right"></i></span>
             </div>
         </div>
