--- a/src/app/Components/userBiomedica/vista-Equipos/equipos-responsable/equipos-responsable.component.html
+++ b/src/app/Components/userBiomedica/vista-Equipos/equipos-responsable/equipos-responsable.component.html
@@ -52,7 +52,14 @@
                 <td>{{ equipo.serie }}</td>
                 <td>{{ equipo.servicios?.sede?.nombres }}</td>
                 <td>{{ equipo.ubicacionEspecifica }}</td>
-                <td>{{ equipo.periodicidadM }}</td>
+                <td>
+                    <span *ngFor="let m of obtenerMesesConCumplimiento(equipo); let last = last" [style.color]="m.color"
+                        [style.font-weight]="'bold'">
+                        {{ m.mes }}{{ last ? '' : ', ' }}
+                    </span>
+                    <span *ngIf="!equipo.planesMantenimiento || equipo.planesMantenimiento.length === 0">Sin
+                        programación</span>
+                </td>
                 <td>{{ equipo.registroInvima }}</td>
                 <td>{{ equipo.riesgo }}</td>
                 <td>
